<resources>
    <string name="app_name">MadLevel1Task2</string>
    <string name="conjunction">Conjunction (AND)</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="f">F</string>
    <string name="t">T</string>
    <string name="ab">A ^ B</string>
    <string name="t_f">T / F</string>
    <string name="submit">Submit</string>
    <string name="correct">%d correct answers!</string>
    <string name="incorrect">Incorrect!</string>
    <string name="invalid">Invalid input!</string>
</resources>