<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/conjunction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/conjunction"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/contentTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="80dp"
        android:stretchColumns="0,1,2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conjunction">

        <TableRow
            android:id="@+id/row1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginVertical="20dp">

            <TextView
                android:id="@+id/a1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/a"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/b1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/b"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/ab1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ab"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginVertical="20dp">

            <TextView
                android:id="@+id/a2"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/t"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/b2"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/t"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <EditText
                android:id="@+id/ab2"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/t_f"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginVertical="20dp">

            <TextView
                android:id="@+id/a3"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/t"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/b3"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/f"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <EditText
                android:id="@+id/ab3"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/t_f"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginVertical="20dp">

            <TextView
                android:id="@+id/a4"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/f"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/b4"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/t"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <EditText
                android:id="@+id/ab4"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/t_f"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:id="@+id/row5"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginVertical="20dp">

            <TextView
                android:id="@+id/a5"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/f"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/b5"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/f"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <EditText
                android:id="@+id/ab5"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/t_f"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:singleLine="true" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentTable" />


</androidx.constraintlayout.widget.ConstraintLayout>